<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterChampDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="Ajouter un champ"
            android:textAllCaps="true"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/white"
                    android:paddingBottom="4dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_wording"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:background="@android:color/white"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="Libellé"
                        android:inputType="text"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/white"
                    android:paddingBottom="4dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_descrption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="Description"
                        android:inputType="text"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                    android:id="@+id/Search_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    app:DoneSearchTintColor="@android:color/white"
                    app:RevealEmptyText="Evaluation"
                    app:RevealViewBackgroundColor="@android:color/white"
                    app:SearchViewBackgroundColor="@android:color/secondary_text_dark"
                    app:ShowBorders="false" />

                <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                    android:id="@+id/Search_field_type"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    app:DoneSearchTintColor="@android:color/white"
                    app:RevealEmptyText="Type de champ"
                    app:RevealViewBackgroundColor="@android:color/white"
                    app:SearchViewBackgroundColor="@android:color/secondary_text_dark"
                    app:ShowBorders="false" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/textColor">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/textColor"
                        android:drawableRight="@drawable/ic_date_range_blue_24dp"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="Délai"
                        android:inputType="date"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/white"
                    android:paddingBottom="4dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_nb_maxi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:ems="10"
                        android:fontFamily="sans-serif"
                        android:hint="Nombre d'utilisation maximales"
                        android:inputType="text"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingBottom="4dp"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">


                <android.support.v7.widget.CardView
                    android:id="@+id/auto_modification"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/background_icon"
                    app:cardElevation="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="Modification auto"
                        android:textAllCaps="true"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </android.support.v7.widget.CardView>

                <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
                    android:id="@+id/SearchableSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal"
                    app:RevealViewBackgroundColor="@android:color/white"
                    app:DoneSearchTintColor="@android:color/white"
                    app:RevealEmptyText="Lier au mini-formulaire"
                    app:SearchViewBackgroundColor="@android:color/white"
                    app:ShowBorders="false" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_required"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Obligatoire"
                    android:textAllCaps="true"
                    app:theme="@style/CheckBoxTheme" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_join_file"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_icon"
                        android:contentDescription="@string/desc_img_join_file"
                        android:src="@drawable/ic_attach_file_white_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/btn_attach_file_title"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_evaluation"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_icon"
                        android:contentDescription="@string/desc_img_join_file"
                        android:src="@drawable/ic_ac_unit_white_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/btn_evaluation_criterion_title"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_las_status"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_icon"
                        android:contentDescription="@string/desc_img_responsible"
                        android:src="@drawable/ic_gavel_white_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/btn_last_status_title"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_condition"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_icon"
                        android:gravity="center"
                        android:text="Condition"
                        android:textAllCaps="true"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <!--Fin relative layout -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_color"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_icon"
                        android:gravity="center"
                        android:text="Couleur"
                        android:textAllCaps="true"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btn_save"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                app:cardBackgroundColor="@color/color_btn"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/save_btn"
                    android:textAllCaps="true"
                    android:textColor="@color/textColor" />

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>